# rtype

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  LICENSE.md  README.md  RFC.md  conanfile.txt  entity.hpp  main.cpp  registry.cpp  registry.hpp  sparse_array.hpp  zipper.hpp  zipper_iterator.hpp
.github/workflows/: build.yml  build_and_mirror.yml  cmake.yml  mirroring.yml
docs/ecs/: book.toml
docs/ecs/src/: SUMMARY.md
docs/ecs/src/components/: add_component.md  register_component.md
docs/ecs/src/entity/: spawn_entity.md
docs/ecs/src/systems/: add_system.md  run_systems.md
docs/ecs/src/zipper/: indexed_zipper.md  zipper.md
gui/: CMakeLists.txt  compile_commands.json
gui/include/: Background.hpp  Bundle.hpp  Client.hpp  Component.hpp  Entity.hpp  Factory.hpp  GraphicComponents.hpp  GraphicSystems.cpp  GraphicSystems.hpp  Parser.hpp  PlayerUtils.hpp  Registry.hpp  Routine.cpp  Routine.hpp  Sparse_array.hpp  Systems.hpp  Zipper.hpp  Zipper_iterator.hpp  indexed_zipper.hpp  indexed_zipper_iterator.hpp  zipper.hpp  zipper_iterator.hpp
gui/source/: Background.cpp  Bundle.cpp  Client.cpp  Factory.cpp  GraphicSystems.cpp  Main.cpp  Parser.cpp  Registry.cpp  Routine.cpp  Ship.cpp  Systems.cpp  main.cpp
gui/tests/: Ecs_tests.cpp  Test_criterion.cpp
include/: Background.cpp  Background.hpp  Keybinds.cpp  Keybinds.hpp  Ship.cpp  Ship.hpp
server/: CMakeLists.txt
server/include/: Server.hpp  ServerBundle.hpp  ServerComponents.hpp  ServerSystems.hpp
server/ressources/Maps/: map_01.json
server/source/: Server.cpp  ServerSystems.cpp
shared/: Bundle.cpp  Bundle.hpp  Component.hpp  Entity.hpp  Factory.cpp  Factory.hpp  NetEnt.hpp  Parser.cpp  Parser.hpp  Registry.cpp  Registry.hpp  Sparse_array.hpp  Systems.cpp  Systems.hpp  Time.cpp  Time.hpp  UserCmd.hpp  Utils.hpp  indexed_zipper.hpp  indexed_zipper_iterator.hpp  zipper.hpp  zipper_iterator.hpp
source/: Main.cpp
tests/: format-code.sh
